Add comments option to test post

--- a/_posts/2019-01-14-second.md
+++ b/_posts/2019-01-14-second.md
@@ -2,6 +2,7 @@
 layout: post 
 title: Testowy post 
 categories: [node-js, projekty]
+comments: true
 ---
 **BLOG W TRAKCIE BUDOWY!!** Lorem ipsum – **tekst** składający się z łacińskich i quasi-łacińskich wyrazów, mający korzenie w klasycznej łacinie, wzorowany na fragmencie traktatu Cycerona „O granicach dobra i zła" napisanego w 45 r. p.n.e. Tekst jest stosowany do demonstracji krojów pisma, kompozycji kolumny itp. Po raz pierwszy został użyty przez nieznanego drukarza w XVI w.
 
