Update about me.

--- a/_posts/2019-02-07-about.md
+++ b/_posts/2019-02-07-about.md
@@ -6,21 +6,15 @@ categories: osobiste
 comments: false
 ---
 
-Witaj! Nazywam się Wojtek, mam 18 lat, obecnie jestem uczniem technikum informatycznego. 
+Witaj! Mam na imię Wojtek. Jestem pasjonatem technologii informatycznej. Szczególnie interesuję się systemami rozproszonymi, architekturą i inżynierią oprogramowania oraz sztuczną inteligencją. Z tego powodu poruszać będę głownie tematy pasujące do tych kategorii. Będę również publikować postępy prac nad moimi projektami.
 
-Pasjonat - to określenie dobrze do mnie pasuje. Blog ten powstał z mojego zamiłowania do technologii informacyjnej.
+Blog ten traktuję jako osobisty notatnik na ważne tematy, które chcę lepiej poznać i zrozumieć, jednak mam nadzieję, że ta wiedza przyda się również Tobie.
 
-Moja ścieżka rozwoju ukierunkowana jest na technologie backendowe, dlatego wpisy na blogu będą głównie dotyczyły tego typu zagadnień.
-
-Planuje poruszać takie tematy jak:
-- Systemy rozproszone
+Planuje również od czasu do czasu poruszyć tematy z kategorii:
 - Cyberbezpieczeństwo
-- Komunikacja sieciowa
-- Programowanie funkcyjne
-- Własne projekty
-- Systemy operacyjne
 - Internet of Things
-- Różne ciekawostki
+- Poradniki
+- Ciekawostki
 {: .list}
 
 Zapraszam do śledzenia bloga! 
